# fluent-pose-synthesis

./: .gitignore  .gitmodules  README.md  dgs_types_mapping.py  environment.yml  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
assets/example/: sentence.pose
assets/example/poses/: DIFFERENT1^.pose  EQUAL1C^.pose  HOUSE1A^.pose  IMAGINATION1A^.pose  SMOOTH-OR-SLICK1^.pose  YOUNG1^.pose  stitched.pose
assets/sample_dataset/: pose_0.gt.pose  pose_0.gt.pose.webm  pose_0.pred.pose  pose_0.pred.pose.webm  pose_1.gt.pose.webm  pose_1.pred.pose.webm  pose_11.gt.pose.webm  pose_11.pred.pose.webm  pose_2.gt.pose  pose_2.pred.pose  pose_3.gt.pose.webm  pose_3.pred.pose.webm  pose_4.gt.pose  pose_4.pred.pose
assets/sample_dataset/test/: test_10_metadata.json  test_10_original.pose  test_10_updated.pose  test_11_metadata.json  test_11_original.pose  test_11_updated.pose  test_12_metadata.json  test_12_original.pose  test_12_updated.pose  test_13_metadata.json  test_13_original.pose  test_13_updated.pose  test_14_metadata.json  test_14_original.pose  test_14_updated.pose  test_15_metadata.json  test_15_original.pose  test_15_updated.pose  test_16_metadata.json  test_16_original.pose  test_16_updated.pose  test_1_metadata.json  test_1_original.pose  test_1_updated.pose  test_2_metadata.json  test_2_original.pose  (+21 more)
data_creation/: data_creation.py  dgs_types_mapping.py
data_creation/examples/: original_pose_0.pose  updated_pose_0.pose
fluent_pose_synthesis/: .style.yapf  README.md  bin.py  create_stitched_example.py  infer.py  infer_autoregressive.py  infer_debug.py  train.py
fluent_pose_synthesis/config/: default.json  option.py
fluent_pose_synthesis/core/: gaussian_diffusion.py  models.py  training.py
fluent_pose_synthesis/data/: create_data.py  load_data.py  map_gloss_to_pose.py  models.py  process_mediapipe_faces.py
fluent_pose_synthesis/evaluation/: calculate_direct_baseline.py  calculate_static_baseline.py  infer.py
fluent_pose_synthesis/network/: models.py
fluent_pose_synthesis/tests/: test_models.py  test_overfit.py
(+44 files in other folders)
